--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ seaborn
 missingno
 matplotlib
 scipy
-scikit-learn
+scikit-learn==0.24.2  # Use the version used to train the model
 joblib
+streamlit
